--- a/frontend/src/style/error404.css
+++ b/frontend/src/style/error404.css
@@ -1,3 +1,25 @@
-.error404 {
+@media screen and (max-width: 600px) {
+  .error404 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding-top: 60%;
+  }
+  .image404 {
+    height: 35vh;
+  }
+}
 
+@media screen and (min-width: 600px) {
+  .error404 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding-top: 20%;
+  }
+  .image404 {
+    height: 35vh;
+  }
 }
