--- a/frontend/src/style/error404.css
+++ b/frontend/src/style/error404.css
@@ -1,3 +1,10 @@
+.paragraphe {
+  font-size: larger;
+  font-weight: bold;
+  font-style: italic;
+  text-decoration: underline;
+}
+
 @media screen and (max-width: 600px) {
   .error404 {
     display: flex;
