--- a/frontend/src/style/App.css
+++ b/frontend/src/style/App.css
@@ -29,3 +29,10 @@ html {
   background-color: #2d4059;
   box-shadow: #2d4059 0px 0px 3px 0px;
 }
+
+.text-randomize {
+
+    text-decoration: none;
+    border-bottom: 4px dotted red;
+  
+ }
