changing little colors

--- a/frontend/src/style/Navbar.css
+++ b/frontend/src/style/Navbar.css
@@ -1,9 +1,9 @@
 .navbar {
   background-color: #2d4059;
-  color: #e9e7cd;
+  color: #F6F6F6F6 ;
   font-size: larger;
 }
 
 .burgerbutton {
-  color: #e9e7cd;
+  color: #F6F6F6F6;
 }
