--- a/frontend/src/style/Loader.css
+++ b/frontend/src/style/Loader.css
@@ -1,7 +1,7 @@
 .loaderText {
   display: flex;
   justify-content: center;
-  color: #8c0712;
+  color: #C40000;
 }
 
 @media screen and (max-width: 600px) {
