--- a/frontend/src/style/App.css
+++ b/frontend/src/style/App.css
@@ -33,7 +33,7 @@ html {
 
 .text-randomize {
   text-decoration: none;
-  border-bottom: 4px dotted #C40000;
+  border-bottom: 4px dotted #c40000;
 }
 
 .txt-perso-search {
